fix: collapse adaptable

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 1023 px;
+  width: 100%;
   height: auto;
 
   .collapse {
@@ -14,7 +14,7 @@
     padding: 0px 20px;
     border-radius: 5px;
     background-color: #ff6060;
-    width: 1003px;
+    width: 100%;
     height: 54px;
     color: white;
     font-weight: bold;
@@ -22,6 +22,10 @@
 
     img {
       transition: transform 0.3s ease-in-out;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
 
     &.open img {
@@ -36,7 +40,7 @@
     overflow: hidden;
     margin-top: 0px;
     padding: 20px 20px;
-    width: 1043px; 
+    width: 100%; 
     white-space: pre-wrap;
     color: black;
     background-color: #f6f6f6 ;
